tests/compile/derive-no-strategy.stderr
error: expected `=`
 --> tests/compile/derive-no-strategy.rs:5:21
  |
5 |     #[merge(strategy)]
  |                     ^
